cmake_minimum_required(VERSION 3.6)
project(Snap_3_0)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        contrib/unict_univr-risnap/RI-DSToSnap/rids.h
        contrib/unict_univr-risnap/RI-DSToSnap/risnapds.cpp
        contrib/unict_univr-risnap/RI-DSToSnap/timer.h
        contrib/unict_univr-risnap/RiToSnap/rinetmatch.h
        contrib/unict_univr-risnap/RiToSnap/risnap.cpp
        contrib/unict_univr-risnap/RiToSnap/timer.h
        examples/agmfit/agmfitmain.cpp
        examples/agmfit/stdafx.cpp
        examples/agmfit/stdafx.h
        examples/agmfit/targetver.h
        examples/agmgen/agmgen.cpp
        examples/agmgen/stdafx.cpp
        examples/agmgen/stdafx.h
        examples/agmgen/targetver.h
        examples/bigclam/bigclam.cpp
        examples/bigclam/stdafx.cpp
        examples/bigclam/stdafx.h
        examples/bigclam/targetver.h
        examples/cascadegen/cascadegen.cpp
        examples/cascadegen/stdafx.cpp
        examples/cascadegen/stdafx.h
        examples/cascadegen/targetver.h
        examples/cascades/cascades.cpp
        examples/cascades/stdafx.cpp
        examples/cascades/stdafx.h
        examples/cascades/targetver.h
        examples/centrality/centrality.cpp
        examples/centrality/stdafx.cpp
        examples/centrality/stdafx.h
        examples/centrality/targetver.h
        examples/cesna/cesna.cpp
        examples/cesna/stdafx.cpp
        examples/cesna/stdafx.h
        examples/cesna/targetver.h
        examples/circles/circles.cpp
        examples/circles/stdafx.cpp
        examples/circles/stdafx.h
        examples/circles/targetver.h
        examples/cliques/cliquesmain.cpp
        examples/cliques/stdafx.cpp
        examples/cliques/stdafx.h
        examples/cliques/targetver.h
        examples/coda/coda.cpp
        examples/coda/stdafx.cpp
        examples/coda/stdafx.h
        examples/coda/targetver.h
        examples/community/community.cpp
        examples/community/stdafx.cpp
        examples/community/stdafx.h
        examples/community/targetver.h
        examples/concomp/concomp.cpp
        examples/concomp/stdafx.cpp
        examples/concomp/stdafx.h
        examples/concomp/targetver.h
        examples/flows/flows.cpp
        examples/flows/stdafx.cpp
        examples/flows/stdafx.h
        examples/flows/targetver.h
        examples/forestfire/forestfire.cpp
        examples/forestfire/stdafx.cpp
        examples/forestfire/stdafx.h
        examples/forestfire/targetver.h
        examples/graphgen/graphgen.cpp
        examples/graphgen/stdafx.cpp
        examples/graphgen/stdafx.h
        examples/graphgen/targetver.h
        examples/graphhash/graphhash.cpp
        examples/graphhash/stdafx.cpp
        examples/graphhash/stdafx.h
        examples/graphhash/targetver.h
        examples/infopath/generate_nets.cpp
        examples/infopath/infopath.cpp
        examples/infopath/stdafx.cpp
        examples/infopath/stdafx.h
        examples/infopath/targetver.h
        examples/kcores/kcores.cpp
        examples/kcores/stdafx.cpp
        examples/kcores/stdafx.h
        examples/kcores/targetver.h
        examples/kronem/kronem.cpp
        examples/kronem/stdafx.cpp
        examples/kronem/stdafx.h
        examples/kronem/targetver.h
        examples/kronfit/kronfit.cpp
        examples/kronfit/stdafx.cpp
        examples/kronfit/stdafx.h
        examples/kronfit/targetver.h
        examples/krongen/krongen.cpp
        examples/krongen/stdafx.cpp
        examples/krongen/stdafx.h
        examples/krongen/targetver.h
        examples/lshtest/lshtest.cpp
        examples/magfit/magfit.cpp
        examples/magfit/stdafx.cpp
        examples/magfit/stdafx.h
        examples/magfit/targetver.h
        examples/maggen/maggen.cpp
        examples/maggen/stdafx.cpp
        examples/maggen/stdafx.h
        examples/maggen/targetver.h
        examples/mkdatasets/mkdatasets.cpp
        examples/mkdatasets/stdafx.cpp
        examples/mkdatasets/stdafx.h
        examples/mkdatasets/targetver.h
        examples/motifcluster/motifclustermain.cpp
        examples/motifcluster/stdafx.cpp
        examples/motifcluster/stdafx.h
        examples/motifcluster/targetver.h
        examples/motifs/motifs.cpp
        examples/motifs/stdafx.cpp
        examples/motifs/stdafx.h
        examples/motifs/targetver.h
        examples/ncpplot/ncpplot.cpp
        examples/ncpplot/stdafx.cpp
        examples/ncpplot/stdafx.h
        examples/ncpplot/targetver.h
        examples/netevol/netevol.cpp
        examples/netevol/stdafx.cpp
        examples/netevol/stdafx.h
        examples/netevol/targetver.h
        examples/netinf/netinf.cpp
        examples/netinf/stdafx.cpp
        examples/netinf/stdafx.h
        examples/netinf/targetver.h
        examples/netstat/netstat.cpp
        examples/netstat/stdafx.cpp
        examples/netstat/stdafx.h
        examples/netstat/targetver.h
        examples/randwalk/randwalk.cpp
        examples/randwalk/stdafx.cpp
        examples/randwalk/stdafx.h
        examples/randwalk/targetver.h
        examples/rolx/stdafx.cpp
        examples/rolx/stdafx.h
        examples/rolx/targetver.h
        examples/rolx/testrolx.cpp
        examples/testgraph/stdafx.cpp
        examples/testgraph/stdafx.h
        examples/testgraph/targetver.h
        examples/testgraph/testgraph.cpp
        examples/XcodeTest/XcodeTest/main.cpp
        examples/zygote/stdafx.cpp
        examples/zygote/stdafx.h
        examples/zygote/targetver.h
        examples/zygote/zydemo.cpp
        glib-core/base.cpp
        glib-core/base.h
        glib-core/bd.cpp
        glib-core/bd.h
        glib-core/bits.cpp
        glib-core/bits.h
        glib-core/blobbs.cpp
        glib-core/blobbs.h
        glib-core/ds.h
        glib-core/dt.cpp
        glib-core/dt.h
        glib-core/env.cpp
        glib-core/env.h
        glib-core/fl.cpp
        glib-core/fl.h
        glib-core/gnuplot.cpp
        glib-core/gnuplot.h
        glib-core/hash.cpp
        glib-core/hash.h
        glib-core/hashmp.h
        glib-core/html.cpp
        glib-core/html.h
        glib-core/http.cpp
        glib-core/http.h
        glib-core/json.cpp
        glib-core/json.h
        glib-core/linalg.cpp
        glib-core/linalg.h
        glib-core/lx.cpp
        glib-core/lx.h
        glib-core/md5.cpp
        glib-core/md5.h
        glib-core/os.cpp
        glib-core/os.h
        glib-core/priorityqueue.h
        glib-core/shash.h
        glib-core/ss.cpp
        glib-core/ss.h
        glib-core/ssmp.cpp
        glib-core/ssmp.h
        glib-core/stdafx.h
        glib-core/tm.cpp
        glib-core/tm.h
        glib-core/unicode.cpp
        glib-core/unicode.h
        glib-core/unicodestring.cpp
        glib-core/unicodestring.h
        glib-core/url.cpp
        glib-core/url.h
        glib-core/ut.cpp
        glib-core/ut.h
        glib-core/wch.cpp
        glib-core/wch.h
        glib-core/xfl.cpp
        glib-core/xfl.h
        glib-core/xmath.cpp
        glib-core/xmath.h
        glib-core/xml.cpp
        glib-core/xml.h
        glib-core/xmlser.h
        glib-core/zipfl.cpp
        glib-core/zipfl.h
        snap-adv/agm.cpp
        snap-adv/agm.h
        snap-adv/agmattr.cpp
        snap-adv/agmattr.h
        snap-adv/agmdirected.cpp
        snap-adv/agmdirected.h
        snap-adv/agmfast.cpp
        snap-adv/agmfast.h
        snap-adv/agmfit.cpp
        snap-adv/agmfit.h
        snap-adv/cascdynetinf.cpp
        snap-adv/cascdynetinf.h
        snap-adv/cascnetinf.cpp
        snap-adv/cascnetinf.h
        snap-adv/circles.h
        snap-adv/cliques.cpp
        snap-adv/cliques.h
        snap-adv/graphcounter.cpp
        snap-adv/graphcounter.h
        snap-adv/kronecker.cpp
        snap-adv/kronecker.h
        snap-adv/mag.cpp
        snap-adv/mag.h
        snap-adv/motifcluster.cpp
        snap-adv/motifcluster.h
        snap-adv/ncp.cpp
        snap-adv/ncp.h
        snap-adv/rolx.cpp
        snap-adv/rolx.h
        snap-adv/subgraphenum.cpp
        snap-adv/subgraphenum.h
        snap-core/alg.cpp
        snap-core/alg.h
        snap-core/anf.cpp
        snap-core/anf.h
        snap-core/attr.cpp
        snap-core/attr.h
        snap-core/bfsdfs.h
        snap-core/bignet.h
        snap-core/casc.cpp
        snap-core/casc.h
        snap-core/centr.cpp
        snap-core/centr.h
        snap-core/cmty.cpp
        snap-core/cmty.h
        snap-core/cncom.cpp
        snap-core/cncom.h
        snap-core/conv.cpp
        snap-core/conv.h
        snap-core/coreper.cpp
        snap-core/coreper.h
        snap-core/ff.cpp
        snap-core/ff.h
        snap-core/flow.cpp
        snap-core/flow.h
        snap-core/gbase.cpp
        snap-core/gbase.h
        snap-core/ggen.cpp
        snap-core/ggen.h
        snap-core/ghash.cpp
        snap-core/ghash.h
        snap-core/gio.cpp
        snap-core/gio.h
        snap-core/graph.cpp
        snap-core/graph.h
        snap-core/graphmp.cpp
        snap-core/graphmp.h
        snap-core/gstat.cpp
        snap-core/gstat.h
        snap-core/gsvd.cpp
        snap-core/gsvd.h
        snap-core/gviz.cpp
        snap-core/gviz.h
        snap-core/kcore.h
        snap-core/mmnet.cpp
        snap-core/mmnet.h
        snap-core/network.cpp
        snap-core/network.h
        snap-core/networkmp.cpp
        snap-core/networkmp.h
        snap-core/numpy.cpp
        snap-core/numpy.h
        snap-core/randwalk.h
        snap-core/Snap.cpp
        snap-core/Snap.h
        snap-core/statplot.cpp
        snap-core/statplot.h
        snap-core/stdafx.h
        snap-core/subgraph.cpp
        snap-core/subgraph.h
        snap-core/table.cpp
        snap-core/table.h
        snap-core/testSnap.cpp
        snap-core/timenet.cpp
        snap-core/timenet.h
        snap-core/triad.cpp
        snap-core/triad.h
        snap-core/util.cpp
        snap-core/util.h
        snap-exp/bfs-dev/bfs-dev.h
        snap-exp/bfs-dev/bfs-hybrid-test.h
        snap-exp/bfs-dev/bfs-hybrid.h
        snap-exp/bfs-dev/bfs-parallel.h
        snap-exp/bfs-dev/bfs-vector.h
        snap-exp/bfs-dev/getScc.cpp
        snap-exp/bfs-dev/livejournal.cpp
        snap-exp/bfs-dev/microsoft.cpp
        snap-exp/bfs-dev/stdafx.cpp
        snap-exp/bfs-dev/stdafx.h
        snap-exp/bfs-dev/targetver.h
        snap-exp/bfs-dev/test.cpp
        snap-exp/bfs-dev/test1.cpp
        snap-exp/bfs-dev/test_parallel.cpp
        snap-exp/bfs-dev/twitter.cpp
        snap-exp/cascades-benchmark/baseline.cpp
        snap-exp/cascades-benchmark/sortSource.cpp
        snap-exp/cascades-benchmark/sortTime.cpp
        snap-exp/cascades-benchmark/stdafx.cpp
        snap-exp/cascades-benchmark/stdafx.h
        snap-exp/cascades-benchmark/targetver.h
        snap-exp/cascades-dev/devBaseline.cpp
        snap-exp/cascades-dev/devBaselineTop.cpp
        snap-exp/cascades-dev/devGraph_v1.2.cpp
        snap-exp/cascades-dev/devSort_v1.4.cpp
        snap-exp/cascades-dev/stdafx.cpp
        snap-exp/cascades-dev/stdafx.h
        snap-exp/cascades-dev/targetver.h
        snap-exp/circles/circles.cpp
        snap-exp/circles/circles.h
        snap-exp/circles/stdafx.cpp
        snap-exp/circles/stdafx.h
        snap-exp/circles/targetver.h
        snap-exp/multimodal-dev/benchmark-TNEANet-unweighted.cpp
        snap-exp/multimodal-dev/benchmark-TNEANet-weighted.cpp
        snap-exp/multimodal-dev/benchmark-unweighted.cpp
        snap-exp/multimodal-dev/benchmark-util.cpp
        snap-exp/multimodal-dev/benchmark-weighted.cpp
        snap-exp/multimodal-dev/benchmark.cpp
        snap-exp/multimodal-dev/delete-exp.cpp
        snap-exp/multimodal-dev/graph-construct-exp.cpp
        snap-exp/multimodal-dev/multimodal.cpp
        snap-exp/multimodal-dev/rand-construct-exp.cpp
        snap-exp/multimodal-dev/stdafx.cpp
        snap-exp/multimodal-dev/stdafx.h
        snap-exp/multimodal-dev/subgraph-exp.cpp
        snap-exp/multimodal-dev/targetver.h
        snap-exp/multimodal-dev/triad-exp.cpp
        snap-exp/test-dev/AggrTest.cpp
        snap-exp/test-dev/ArithOpsTest.cpp
        snap-exp/test-dev/Benchmark.cpp
        snap-exp/test-dev/BenchmarkAshton.cpp
        snap-exp/test-dev/BenchmarkUtilities.h
        snap-exp/test-dev/ConvBenchmark.cpp
        snap-exp/test-dev/ConvBenchmarkMP.cpp
        snap-exp/test-dev/Engine.cpp
        snap-exp/test-dev/Engine.h
        snap-exp/test-dev/ExplicitStringTableTest1.cpp
        snap-exp/test-dev/ExplicitStringTableTest2.cpp
        snap-exp/test-dev/ExplicitStringTableTest3.cpp
        snap-exp/test-dev/ExplicitStringTableTest4.cpp
        snap-exp/test-dev/ExplicitStringTableTest5.cpp
        snap-exp/test-dev/ExplicitStringTableTest6.cpp
        snap-exp/test-dev/FilterTest.cpp
        snap-exp/test-dev/GraphOperationsTest.cpp
        snap-exp/test-dev/GroupTest.cpp
        snap-exp/test-dev/HashtagGraphTest.cpp
        snap-exp/test-dev/IdTest.cpp
        snap-exp/test-dev/LoadTest.cpp
        snap-exp/test-dev/MemoryAllocTest.cpp
        snap-exp/test-dev/ParallelGroupByTest.cpp
        snap-exp/test-dev/ParGroupAggrTest.cpp
        snap-exp/test-dev/ParJoinTest.cpp
        snap-exp/test-dev/ParLargeGraph.cpp
        snap-exp/test-dev/ParSelect2Test.cpp
        snap-exp/test-dev/ParSelectTest.cpp
        snap-exp/test-dev/ParToGraphTest.cpp
        snap-exp/test-dev/PhysicalOrderSortTest1.cpp
        snap-exp/test-dev/PhysicalOrderSortTest2.cpp
        snap-exp/test-dev/PredicateTest.cpp
        snap-exp/test-dev/SetOperationsTest.cpp
        snap-exp/test-dev/SimJoinPerGroupTest.cpp
        snap-exp/test-dev/SimJoinTest.cpp
        snap-exp/test-dev/TableAttributeTest.cpp
        snap-exp/test-dev/TableIndexTest.cpp
        snap-exp/test-dev/TablePageRank.cpp
        snap-exp/test-dev/TableTest.cpp
        snap-exp/test-dev/TableTest1.cpp
        snap-exp/test-dev/testPageRank.cpp
        snap-exp/test-dev/testTriangleCount.cpp
        snap-exp/test-dev/ToGraphSeqTest.cpp
        snap-exp/test-dev/ToGraphTest.cpp
        snap-exp/alternativetable.cpp
        snap-exp/alternativetable.h
        snap-exp/arxiv.cpp
        snap-exp/arxiv.h
        snap-exp/centr-exp.cpp
        snap-exp/centr-exp.h
        snap-exp/dblp.cpp
        snap-exp/dblp.h
        snap-exp/graphmp-exp.h
        snap-exp/imdbnet.cpp
        snap-exp/imdbnet.h
        snap-exp/linkpred.cpp
        snap-exp/linkpred.h
        snap-exp/lsh.cpp
        snap-exp/lsh.h
        snap-exp/memenet.cpp
        snap-exp/memenet.h
        snap-exp/memes.cpp
        snap-exp/memes.h
        snap-exp/mmgraph-exp.cpp
        snap-exp/mmgraph-exp.h
        snap-exp/mxdag.cpp
        snap-exp/mxdag.h
        snap-exp/signnet.cpp
        snap-exp/signnet.h
        snap-exp/sir.cpp
        snap-exp/sir.h
        snap-exp/spinn3r.cpp
        snap-exp/spinn3r.h
        snap-exp/trawling.cpp
        snap-exp/trawling.h
        snap-exp/wgtnet.cpp
        snap-exp/wgtnet.h
        snap-exp/wikinet.cpp
        snap-exp/wikinet.h
        test/run-all-tests.cpp
        test/test-alg.cpp
        test/test-bfsdfs.cpp
        test/test-cncom.cpp
        test/test-file.cpp
        test/test-flow.cpp
        test/test-ggen.cpp
        test/test-gio.cpp
        test/test-gviz.cpp
        test/test-helper.cpp
        test/test-helper.h
        test/test-multimodal.cpp
        test/test-priority-queue.cpp
        test/test-randwalk.cpp
        test/test-subgraph.cpp
        test/test-TAttr.cpp
        test/test-TCrossNet.cpp
        test/test-TDirNet.cpp
        test/test-THash.cpp
        test/test-THashSet.cpp
        test/test-TMMNet.cpp
        test/test-TModeNet.cpp
        test/test-TNEANet.cpp
        test/test-TNEGraph.cpp
        test/test-TNGraph.cpp
        test/test-TNodeEDatNet.cpp
        test/test-TNodeEdgeNet.cpp
        test/test-TNodeNet.cpp
        test/test-triad.cpp
        test/test-TStrPool.cpp
        test/test-TSysTm.cpp
        test/test-TTable.cpp
        test/test-TUndirNet.cpp
        test/test-TUNGraph.cpp
        tutorials/demo-alg.cpp
        tutorials/demo-bfsdfs.cpp
        tutorials/demo-cncom.cpp
        tutorials/demo-cncom1.cpp
        tutorials/demo-ggen.cpp
        tutorials/demo-gio.cpp
        tutorials/demo-gviz.cpp
        tutorials/demo-hashvec-benchmark.cpp
        tutorials/demo-multimodal.cpp
        tutorials/demo-subgraph.cpp
        tutorials/demo-TAttr.cpp
        tutorials/demo-TDirNet.cpp
        tutorials/demo-THash.cpp
        tutorials/demo-TNEANet.cpp
        tutorials/demo-TNEGraph.cpp
        tutorials/demo-TNGraph.cpp
        tutorials/demo-TNodeEDatNet.cpp
        tutorials/demo-TNodeEdgeNet.cpp
        tutorials/demo-TNodeNet.cpp
        tutorials/demo-topology-benchmark.cpp
        tutorials/demo-triad.cpp
        tutorials/demo-TSsParser.cpp
        tutorials/demo-TUndirNet.cpp
        tutorials/demo-TUNGraph.cpp)

add_executable(Snap_3_0 ${SOURCE_FILES})